--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Dumb Test
 author: Someone
 email: someone@nowhere.com
 description: Something
-github_username: cpolizzi
+github_username: devnull00xx
 
 markdown: kramdown
 theme: modernist
