--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,7 @@ description: Something
 github_username: devnull00xx
 
 markdown: kramdown
-theme: modernist
+remote_theme: pages-themes/modernist@v0.2.0
+plugins:
+  - jekyll-remote-theme
+
