--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,12 @@ description: Something
 github_username: devnull00xx
 
 markdown: kramdown
-remote_theme: pages-themes/modernist@v0.2.0
-theme: modernist
+
+#remote_theme: pages-themes/modernist@v0.2.0
+#theme: modernist
+#plugins:
+#  - jekyll-remote-theme
+
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
-
