--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ markdown: kramdown
 #plugins:
 #  - jekyll-remote-theme
 
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-  - jekyll-remote-theme
+#remote_theme: pages-themes/cayman@v0.2.0
+#plugins:
+#  - jekyll-remote-theme
 
 theme: jekyll-theme-minimal
