--- a/_config.yml
+++ b/_config.yml
@@ -15,4 +15,6 @@ markdown: kramdown
 #plugins:
 #  - jekyll-remote-theme
 
-theme: jekyll-theme-minimal
+#theme: jekyll-theme-minimal
+
+theme: minima
