--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,17 @@ github_username: devnull00xx
 
 markdown: kramdown
 
-#remote_theme: pages-themes/modernist@v0.2.0
-#theme: modernist
-#plugins:
-#  - jekyll-remote-theme
+plugins:
+  - jekyll-remote-theme
 
-#remote_theme: pages-themes/cayman@v0.2.0
-#plugins:
-#  - jekyll-remote-theme
+#theme: minima
 
 #theme: jekyll-theme-minimal
 
-theme: minima
+#remote_theme: pages-themes/modernist@v0.2.0
+#theme: modernist
+
+#remote_theme: pages-themes/cayman@v0.2.0
+#theme: cayman
+
+remote_theme: pages-themes/architect@v0.2.0
