--- a/_config.yml
+++ b/_config.yml
@@ -9,15 +9,7 @@ markdown: kramdown
 plugins:
   - jekyll-remote-theme
 
-#theme: minima
-
-#theme: jekyll-theme-minimal
-
-#remote_theme: pages-themes/modernist@v0.2.0
-theme: jekyll-theme-time-machine
-
-#remote_theme: pages-themes/cayman@v0.2.0
+#theme: jekyll-theme-modernist
 #theme: jekyll-theme-cayman
-
-#remote_theme: pages-themes/architect@v0.2.0
 #theme: jekyll-theme-architect
+theme: jekyll-theme-time-machine
