--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,4 @@ markdown: kramdown
 plugins:
   - jekyll-remote-theme
 
-#theme: jekyll-theme-time-machine
-theme: jekyll-theme-modernist
-#theme: jekyll-theme-cayman
-#theme: jekyll-theme-architect
+theme: jekyll-theme-time-machine
