--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Dumb Test
 author: Someone
 email: someone@nowhere.com
-description: Something
+description: This is merely a dumb test
 github_username: devnull00xx
 
 markdown: kramdown
