--- a/.github/workflows/asciidoctor-ghpages.yml
+++ b/.github/workflows/asciidoctor-ghpages.yml
@@ -24,4 +24,4 @@ jobs:
       uses: manoelcampos/asciidoctor-ghpages-action@v2
       with:
         asciidoctor_params: --attribute=nofooter
-        pdf_build: true
+        pdf_build: false
